# training

TensorRT/: .gitignore  CMakeLists.txt  infer.cpp  infer.py  model_loading.py  requirements.txt
kaggle/airbus/: airbus_object_detection.ipynb
kaggle/airbus/yolov3/: dataset.py  model.py
leetcode/: main  main.cpp
object-dection/YOLOv1/: loss.py  model.py  utils.py
object-dection/YOLOv3/: .gitignore  config.py  dataset.py  model.py  test.ipynb  test.py  train.py  utils.py
object-detection/YOLOv1/: dataset.py
object-detection/YOLOv3/: config.py  loss.py  model.py  test.ipynb  test.py  train.py
pytorch/: inception_net.py  resnet.py  vgg_16.py
pytorch/yolov1/: dataset.py  loss.py  model.py  train.py
